templates/private-integration-tutorial-template.yml
#
# Tutorial: Building an HTTP API with a private integration to an Amazon ECS service
# https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-private-integration.html
#
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  Make Private VPC for SSM Login

Resources:
  # Make VPC
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html
  PrivateIntegrationsTutorialVPCD20D58E8:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC
  # Make PublicSubnet1
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
  PrivateIntegrationsTutorialVPCPublicSubnet1SubnetBE0B3CBD:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'aws-tutorial:subnet-name'
          Value: Public
        - Key: 'aws-tutorial:subnet-type'
          Value: Public
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  # Make RouteTable
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-routetable.html
  PrivateIntegrationsTutorialVPCPublicSubnet1RouteTableA63763CC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  # Make RouteTableAssociation
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-network-acl-assoc.html
  PrivateIntegrationsTutorialVPCPublicSubnet1RouteTableAssociationFD6DF484:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1RouteTableA63763CC
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1SubnetBE0B3CBD
  # Make Route
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  PrivateIntegrationsTutorialVPCPublicSubnet1DefaultRouteD59FC1D2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1RouteTableA63763CC
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PrivateIntegrationsTutorialVPCIGW3645F9D4
    DependsOn:
      - PrivateIntegrationsTutorialVPCVPCGW514A8E2A
  # Make EIP
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
  PrivateIntegrationsTutorialVPCPublicSubnet1EIPD3DAF766:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  # Make NetGateway
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-natgateway.html
  PrivateIntegrationsTutorialVPCPublicSubnet1NATGatewayC5702CC8:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt
        - PrivateIntegrationsTutorialVPCPublicSubnet1EIPD3DAF766
        - AllocationId
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1SubnetBE0B3CBD
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  # Make Subnet2
  PrivateIntegrationsTutorialVPCPublicSubnet2Subnet26685AB7:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'aws-tutorial:subnet-name'
          Value: Public
        - Key: 'aws-tutorial:subnet-type'
          Value: Public
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  # Make RouteTable
  PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable356B306D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  # Make RouteTableAssociation
  PrivateIntegrationsTutorialVPCPublicSubnet2RouteTableAssociation1035F5D0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable356B306D
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2Subnet26685AB7
  # Make Route
  PrivateIntegrationsTutorialVPCPublicSubnet2DefaultRoute4AB2237D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable356B306D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PrivateIntegrationsTutorialVPCIGW3645F9D4
    DependsOn:
      - PrivateIntegrationsTutorialVPCVPCGW514A8E2A
  #  Make EIP
  PrivateIntegrationsTutorialVPCPublicSubnet2EIP40226FDB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  # Make NetGateway
  PrivateIntegrationsTutorialVPCPublicSubnet2NATGatewayE6EAEEAB:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt
        - PrivateIntegrationsTutorialVPCPublicSubnet2EIP40226FDB
        - AllocationId
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2Subnet26685AB7
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  # Make Subnet3
  PrivateIntegrationsTutorialVPCPrivateSubnet1SubnetE5CDA06F:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'aws-tutorial:subnet-name'
          Value: Private
        - Key: 'aws-tutorial:subnet-type'
          Value: Private
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet1
  # Make RouteTable
  PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable2DE71EA5:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet1
  # Make RouteTableAssociation
  PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTableAssociation0CFE385A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable2DE71EA5
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1SubnetE5CDA06F
  # Make Route
  PrivateIntegrationsTutorialVPCPrivateSubnet1DefaultRouteAAEB83F7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable2DE71EA5
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1NATGatewayC5702CC8
  # Make Private Subnet
  PrivateIntegrationsTutorialVPCPrivateSubnet2SubnetA9278FA5:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'aws-tutorial:subnet-name'
          Value: Private
        - Key: 'aws-tutorial:subnet-type'
          Value: Private
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet2
  # Make RouteTable
  PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable6E1CF234:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet2
  # Make SubnetRouteTableAssociation
  PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTableAssociation7F682A6E:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable6E1CF234
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2SubnetA9278FA5
  # Make Route
  PrivateIntegrationsTutorialVPCPrivateSubnet2DefaultRoute012406AE:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable6E1CF234
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2NATGatewayE6EAEEAB
  # Make InternetGateway
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-internetgateway.html
  PrivateIntegrationsTutorialVPCIGW3645F9D4:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC
  # Make VPCGatewayAttachment
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc-gateway-attachment.html
  PrivateIntegrationsTutorialVPCVPCGW514A8E2A:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
      InternetGatewayId: !Ref PrivateIntegrationsTutorialVPCIGW3645F9D4

  # Make Cluster
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-cluster.html
  PrivateIntegrationsTutorialCluster09C95435:
    Type: AWS::ECS::Cluster
  # Make LoadBalancer
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html
  PrivateIntegrationsTutorialServiceLB8E9ECEA5:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: 'false'
      Scheme: internal
      SecurityGroups:
        - !GetAtt
          - PrivateIntegrationsTutorialServiceLBSecurityGroup22BA351A
          - GroupId
      Subnets:
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1SubnetE5CDA06F
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2SubnetA9278FA5
      Type: application
  # Make SecurityGroup
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
  PrivateIntegrationsTutorialServiceLBSecurityGroup22BA351A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: >-
        Automatically created Security Group for ELB
        PrivateIntegrationsStackPrivateIntegrationsTutorialServiceLBCB8E0368
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
  # Make SecurityGroupEgress
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-security-group-egress.html
  PrivateIntegrationsTutorialServiceLBSecurityGrouptoPrivateIntegrationsStackPrivateIntegrationsTutorialServiceSecurityGroupD7C89143805EA68A3C:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceLBSecurityGroup22BA351A
        - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceSecurityGroup334FF7AF
        - GroupId
      FromPort: 80
      ToPort: 80
  # Make Listener
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
  PrivateIntegrationsTutorialServiceLBPublicListener2554FECD:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup0E6605DB
          Type: forward
      LoadBalancerArn: !Ref PrivateIntegrationsTutorialServiceLB8E9ECEA5
      Port: 80
      Protocol: HTTP
  # Make TargetGroup
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listener-targetgrouptuple.html
  PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup0E6605DB:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
  # Make IAM::Role
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html
  PrivateIntegrationsTutorialServiceTaskDefTaskRole2B89439A:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  # Make TaskDefinition
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html
  PrivateIntegrationsTutorialServiceTaskDef914930A0:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: amazon/amazon-ecs-sample
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref PrivateIntegrationsTutorialServiceTaskDefwebLogGroupBA8BE497
              awslogs-stream-prefix: PrivateIntegrationsTutorialService
              awslogs-region: !Ref 'AWS::Region'
          Name: web
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
      Cpu: '512'
      ExecutionRoleArn: !GetAtt
        - PrivateIntegrationsTutorialServiceTaskDefExecutionRoleC7103AEA
        - Arn
      Family: >-
        PrivateIntegrationsStackPrivateIntegrationsTutorialServiceTaskDefB5E162FC
      Memory: '2048'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !GetAtt
        - PrivateIntegrationsTutorialServiceTaskDefTaskRole2B89439A
        - Arn
  # Make LogGroup
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-logs-loggroup.html
  PrivateIntegrationsTutorialServiceTaskDefwebLogGroupBA8BE497:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  # Make IAM Role
  PrivateIntegrationsTutorialServiceTaskDefExecutionRoleC7103AEA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  # Make IAM Policy
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html
  PrivateIntegrationsTutorialServiceTaskDefExecutionRoleDefaultPolicy0F96072D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "logs:CreateLogStream"
              - "logs:PutLogEvents"
            Effect: Allow
            Resource: !GetAtt
              - PrivateIntegrationsTutorialServiceTaskDefwebLogGroupBA8BE497
              - Arn
        Version: 2012-10-17
      PolicyName: >-
        PrivateIntegrationsTutorialServiceTaskDefExecutionRoleDefaultPolicy0F96072D
      Roles:
        - !Ref PrivateIntegrationsTutorialServiceTaskDefExecutionRoleC7103AEA
  # Make Service
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html
  PrivateIntegrationsTutorialService73010F72:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref PrivateIntegrationsTutorialCluster09C95435
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 80
          TargetGroupArn: !Ref PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup0E6605DB
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt
              - PrivateIntegrationsTutorialServiceSecurityGroup334FF7AF
              - GroupId
          Subnets:
            - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1SubnetE5CDA06F
            - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2SubnetA9278FA5
      TaskDefinition: !Ref PrivateIntegrationsTutorialServiceTaskDef914930A0
    DependsOn:
      - PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup0E6605DB
      - PrivateIntegrationsTutorialServiceLBPublicListener2554FECD
  # Make SecurityGroup
  PrivateIntegrationsTutorialServiceSecurityGroup334FF7AF:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: >-
        PrivateIntegrationsStack/PrivateIntegrationsTutorialService/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      VpcId: !Ref PrivateIntegrationsTutorialVPCD20D58E8
  # Make SecurityGroupIngress
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group-ingress.html
  PrivateIntegrationsTutorialServiceSecurityGroupfromPrivateIntegrationsStackPrivateIntegrationsTutorialServiceLBSecurityGroup37A9AEF980935D99E0:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceSecurityGroup334FF7AF
        - GroupId
      SourceSecurityGroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceLBSecurityGroup22BA351A
        - GroupId
      ToPort: 80
# https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/outputs-section-structure.html
Outputs:
  PrivateIntegrationsTutorialServiceLoadBalancerDNSCBE42D83:
    Value: !GetAtt
      - PrivateIntegrationsTutorialServiceLB8E9ECEA5
      - DNSName
  PrivateIntegrationsTutorialServiceServiceURLB6E59CA2:
    Value: !Join
      - ''
      - - "http://"
        - !GetAtt
          - PrivateIntegrationsTutorialServiceLB8E9ECEA5
          - DNSName
